--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mini-projet-redux",
+  "homepage":"https://mohameqa.github.io/projectMini/",
+  "name": "miniprojectredux-main",
   "version": "0.1.0",
-  "homepage": "https://MOHAMEQA.github.io/projectMini.git",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
@@ -12,7 +12,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^4.2.4"
